force-app/main/default/objects/gmpkg__ComponentPermission__c/gmpkg__ComponentPermission__c.object-meta.xml
<CustomObject>
    <label>Component Permission</label>
    <nameField>
        <displayFormat>CP-{0000000000}</displayFormat>
        <label>Permission #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Component Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>