force-app/main/default/objects/gmpkg__ComponentPermission__c/fields/gmpkg__Component__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Component__c</fullName>
    <label>Component</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>