force-app/main/default/objects/gmpkg__ComponentPermission__c/fields/gmpkg__Inherited__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Inherited__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Inherited</label>
    <type>Checkbox</type>
</CustomField>